--- a/MadWolfTwitchBot.Api/MadWolfTwitchBot.BotCommands.csproj
+++ b/MadWolfTwitchBot.Api/MadWolfTwitchBot.BotCommands.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="TwitchLib" Version="3.2.0" />
+    <PackageReference Include="TwitchLib" Version="3.3.0" />
   </ItemGroup>
 
 </Project>
