--- a/MadWolfTwitchBot.Services/MadWolfTwitchBot.Services.csproj
+++ b/MadWolfTwitchBot.Services/MadWolfTwitchBot.Services.csproj
@@ -1,10 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\TwitchStreamAnayliser\Tools.StreamSerializer\Tools.StreamSerializer.csproj" />
     <ProjectReference Include="..\MadWolfTwitchBot.Domain\MadWolfTwitchBot.Domain.csproj" />
     <ProjectReference Include="..\MadWolfTwitchBot.Models\MadWolfTwitchBot.Models.csproj" />
   </ItemGroup>
